--- a/Currying/index.html
+++ b/Currying/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Objects</title>
+    <title>Currying</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h1>Objects in javaScript</h1>
+    <h1>Currying in javaScript</h1>
   </body>
   <script src="index.js"></script>
 </html>
-
