--- a/Currying/index.html
+++ b/Currying/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <h1>Currying in javaScript</h1>
+    <h1 id="heading">Sanjay Baro</h1>
   </body>
   <script src="index.js"></script>
 </html>
